--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -245,3 +245,11 @@ body {
     color: #B9B9B9;
     font-family:
 }
+
+ul.navbar-nav{
+margin-top: -15px;
+margin-right: -8px;
+}
+ul.nav li.dropdown:hover ul.dropdown-menu {
+    display: block;
+}
