Teacher list works, students cant see list, and student list has links (still have to make links to their respective profiles)

--- a/modules/users/client/views/studentlist.client.view.html
+++ b/modules/users/client/views/studentlist.client.view.html
@@ -4,7 +4,7 @@
     <div class="page-header">
         <h1>Students</h1>
     </div>
-    
+    <!--list of students-->
             <div class="list-group">
             <h3 class="list-group-item-heading">Name</h3>
   			<a ng-repeat="d in data"class="list-group-item">
