pictures, descriptions, links, breadcrumbs minor

--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -25,7 +25,7 @@
             
             <div class="col-md-6">
             	<div class="head con">
-            		<img class="center" src="modules/core/client/img/brand/logo2.png" alt="" style="width: 500px;">
+            		<a href="http://biotility.research.ufl.edu/"><img class="center" src="modules/core/client/img/brand/logo2.png" alt="" style="width: 500px;"></a>
             	</div>
             </div> <!--column-->
             
