--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,23 +18,23 @@
         <div class="carousel-caption">
           <h3 class="m"> Advanced
             <span style="color: #FD432F">biotechnology</span> education and training </h3>
-          <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+          <p class="mh">Select a topic from the list below to begin preparation for the <br>Biotechnician Assistant Credentialing Exam (BACE)</p>
         </div>
       </div>
       <!-- Second Item -->
       <div class="item">
         <img src="./modules/core/client/img/biotility_img/gown.jpg" alt="...">
         <div class="carousel-caption">
-          <h3 class="m"> Sample Slide 2 </h3>
-          <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+          <h3 class="m"> Assess Your Knowledge </h3>
+          <p class="mh">Click the Quiz link from one of the topics below to begin your knowledge assessment</p>
         </div>
       </div>
       <!-- Third Item -->
       <div class="item">
-        <img src="./modules/core/client/img/biotility_img/vats.jpg" alt="...">
+        <img src="./modules/core/client/img/biotility_img/plants.jpg" alt="...">
         <div class="carousel-caption">
-          <h3 class="m"> Sample slide 3 </h3>
-          <p class="mh">Preparation for the Biotechnician Assistant Credentialing Exam (BACE)</p>
+          <h3 class="m"> Review Resources </h3>
+          <p class="mh">Click the Resources link from one of the topics below to learn more before starting a quiz</p>
         </div>
       </div>
     </div>
