--- a/modules/quiz/client/views/quizUpload.client.view.html
+++ b/modules/quiz/client/views/quizUpload.client.view.html
@@ -1,4 +1,4 @@
-<div ui-view class = "margin-top-50" ng-controller = "QuizCreate" ng-init = "getQuestion()">
+<div ui-view class = "margin-top-50" ng-controller = "QuizCreate">
     <div class="header-space">
         <!-- Using this for space -->
     </div>
@@ -12,5 +12,9 @@
 		        <h2>File content is:</h2>
 		        <pre>{{ content }}</pre>
 		    </div>
+		</div>
+		<div class = "container">
+			<h1> Insert Subject </h1>
+			
 		</div>
 </div>
