--- a/modules/core/client/views/resources.client.view.html
+++ b/modules/core/client/views/resources.client.view.html
@@ -11,37 +11,270 @@
     	</div>
     </div>
    
-    
-    <div class="container head about-sub">
-    	Overview
-    </div>
-    <div class="container head con">
-    
-    <img class="center resource bord" src="modules/core/client/img/biotility_img/resources_test.jpg" alt="" style="width: 500px;">
-    
-    	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt libero ac tortor mattis, sit amet scelerisque nibh sollicitudin. Maecenas rutrum enim lorem. Suspendisse a tortor eu massa congue hendrerit ac elementum metus. Sed interdum, tortor nec imperdiet aliquet, velit nisl rhoncus eros, id ultrices dui purus at risus. Curabitur ligula nisl, euismod non facilisis eget, rhoncus vitae dui. Phasellus faucibus nibh vitae placerat tincidunt. Morbi pulvinar et mauris eu luctus.<br><br>
-
-Proin vitae mi vel neque fermentum porttitor quis ut tortor. Maecenas maximus tellus sit amet arcu iaculis gravida. Donec dignissim congue eleifend. Nulla porttitor turpis vitae iaculis congue. Vestibulum porta diam in facilisis ultrices. Quisque pellentesque, enim id faucibus fermentum, neque diam luctus purus, at maximus nisi urna eu mauris. Morbi vulputate, dui nec viverra pharetra, nulla dui egestas odio, sit amet tempus velit velit in ante. Donec dictum, magna malesuada luctus euismod, felis ante tempus libero, at ullamcorper ipsum est imperdiet magna. Proin ac dui a urna malesuada varius vel vel metus. Nam luctus est at ullamcorper aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam tortor odio, auctor ut iaculis at, gravida ac odio.<br><br>
-
-Pellentesque egestas libero ac eros tempus, a malesuada nunc malesuada. Donec placerat enim in arcu congue eleifend. Nam ut malesuada nulla. Donec mollis convallis neque, sed dictum ligula dignissim at. Aenean interdum nec orci ut ultricies. Morbi tincidunt tellus quis finibus vulputate. Fusce in accumsan justo.<br><br>
-
-Vivamus eu metus quis eros cursus efficitur non non mauris. Fusce pretium nunc sit amet mi sollicitudin maximus. Sed pretium malesuada tellus, a placerat est euismod ut. Donec efficitur, lectus vitae sodales congue, ex lacus finibus massa, a venenatis urna nunc a est. In feugiat ante elit, venenatis auctor dolor gravida id. Sed volutpat orci eu ante blandit, eget egestas lectus elementum. Phasellus feugiat lacinia enim, quis tristique nibh mollis ac. Sed finibus sit amet nibh sollicitudin aliquet. Integer a quam enim. Fusce id maximus purus. Morbi vehicula libero in lectus maximus, a rhoncus ligula sagittis. Aenean quis orci nisl. Praesent non eros a ligula suscipit sollicitudin non in felis. Etiam tincidunt nibh eu tristique porttitor.<br><br>
-
-Ut arcu purus, hendrerit a sollicitudin vitae, consequat ac turpis. Maecenas id risus facilisis, vestibulum augue vel, tincidunt lectus. Donec vitae lobortis enim, vitae eleifend diam. Fusce vitae consectetur nulla. Fusce hendrerit mattis lacus in viverra. Proin pretium, leo aliquam faucibus mattis, purus velit dignissim sapien, nec tincidunt magna magna vel augue. Phasellus at ultrices nisi, vitae mattis orci. Aenean pretium quam turpis, id gravida nisi congue ac. Duis tempor, urna in sodales consectetur, erat justo viverra eros, sit amet volutpat nulla lorem eu tortor. Fusce id erat quis mauris rutrum suscipit. Suspendisse commodo in justo ut ultrices. Integer pretium pharetra ex, ut lobortis dolor ornare et. Sed ut neque blandit, convallis augue nec, tincidunt nisl. Nulla blandit justo at nulla malesuada elementum.<br>
-    </div>
-    
-    <div class="container head about-ssub" style="margin-top: 40px;">
+   
+   <div class="container head about-sub">
     	Learn More
     </div>
     
-    <div class="container head con" style="padding-left: 50px">
-    	<a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is a Cell?</a>
-        <br><br>
-        <a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is Genetics?</a>
-        <br><br>
-        <a href="http://ghr.nlm.nih.gov/handbook/basics/cell">What is a Biochemistry?</a>
-        <br><br>
-    </div>
+    <!--Cells-->
+    <div ng-show="subject == 'Cells'">
+    
+    	<div class="container head res-sub">
+    		Cell Structures and Organelles
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.biology4kids.com/files/cell_mito.html">Cell Structure: Mitochondria</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+    <!--Chemistry and Biochemistry-->
+    <div ng-show="subject == 'Chemistry & Biochemistry'">
+    	<div class="container head res-sub">
+    		Cell Respiration
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.diffen.com/difference/Aerobic_Respiration_vs_Anaerobic_Respiration">Aerobic vs. Anaerobic Respiration</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Chemistry, Molecules & Macromolecules
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.diffen.com/difference/Aerobic_Respiration_vs_Anaerobic_Respiration">Aerobic vs. Anaerobic Respiration</a>
+            <br><br>
+            <a href="http://www.dummies.com/how-to/content/four-groups-of-macromolecules.html">Macromolecules</a>
+            <br><br>
+            <a href="
+http://www.oxoid.com/uk/blue/techsupport/its.asp?itsp=faq&faq=tsfaq010&cat=culture+media%2C+supplements+and+raw+materials&lang=EN&c=UK">Formulation of Culture Media</a>
+            <br><br>
+        </div>
+        
+		<div class="container head res-sub">
+    		DNA Structure & Function
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.nature.com/scitable/topicpage/dna-is-a-structure-that-encodes-biological-6493050">DNA</a>
+            <br><br>
+            <a href="http://www.yourgenome.org/facts/what-is-dna-replication">What is DNA Replication?</a>
+            <br><br>
+            <a href="http://www.nature.com/scitable/definition/dna-polymerase-dnap-1">DNA Polymerase</a>
+            <br><br>
+        </div>
+        
+       <div class="container head res-sub">
+    		Enzymes & Reactions
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://eol.org/pages/974560/overview">Thermus aquaticus</a>
+            <br><br>
+        </div>
+        
+		<div class="container head res-sub">
+    		Protein Structure & Function
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.nature.com/scitable/definition/translation-rna-translation-173">Translation RNA</a>
+            <br><br>
+            <a href="http://www.nobelprize.org/educational/medicine/dna/a/translation/index.html">Translation</a>
+            <br><br>
+            <a href="http://www.nature.com/scitable/topicpage/protein-structure-14122136">Protein Structure</a>
+            <br><br>
+        </div>
+        
+		<div class="container head res-sub">
+    		Translation (Gene Expression)
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.nature.com/scitable/topicpage/translation-dna-to-mrna-to-protein-393">Translation: DNA to mRNA to Protein</a>
+            <br><br>
+            <a href="http://www.majordifferences.com/2013/09/difference-between-prokaryotic.html#.Vg1vtvlVhBc">Prokaryotic vs. Eukaryotic Translation</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+       <!--Genetics-->
+    <div ng-show="subject == 'Genetics'">
+    
+    	<div class="container head res-sub">
+    		Mitosis & Chromosomes
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.nature.com/scitable/topicpage/mitosis-and-cell-division-205">Mitosis and Cell Division</a>
+            <br><br>
+            <a href="http://vlab.amrita.edu/?sub=3&brch=188&sim=1102&cnt=1">Mitosis in Onion Root Tips</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Meiosis
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.johnkyrk.com/meiosis.html">Meiosis</a>
+            <br><br>
+            <a href="http://www.nature.com/scitable/topicpage/dna-is-constantly-changing-through-the-process-6524876">Recombination</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+          <!--lab skills and applications-->
+    <div ng-show="subject == 'Laboratory Skills & Applications'">
+    
+    	<div class="container head res-sub">
+    		pH
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://chemcollective.org/activities/tutorials/buffers/buffers1">pH and Buffers</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Polymerase Chain Reaction (PCR)
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://eol.org/pages/974560/overview">Thermus aquaticus</a>
+            <br><br>
+            <p>If the annealing temperature is too low, primers may bind nonspecifically to the template. The rule of thumb is to use an annealing temperature that is 5°C lower than the Tm of the primer. To calculate the primer Tm, use the tool at <a href="http://www.basic.northwestern.edu/biotools/oligocalc.html"> http://www.basic.northwestern.edu/biotools/oligocalc.html</a> with the default salt concentration and 0.2–1 μM primer (depending on your reaction conditions). Use the lowest primer Tm when calculating the annealing temperature. For greater accuracy, optimize the annealing temperature by using a thermal gradient.</p>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Recombinant DNA/Cloning
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://users.rcn.com/jkimball.ma.ultranet/BiologyPages/R/RecombinantDNA.html">Recombinant DNA</a>
+            <br><br>
+            <a href="http://www.ucsusa.org/food_and_agriculture/our-failing-food-system/genetic-engineering/what-is-genetic-engineering.html#.Vg7aLPlVhBc">What is Genetic Engineering?</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Western Blotting & ELISA
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="https://askabiologist.asu.edu/sds-page">SDS-PAGE</a>
+            <br><br>
+            <a href="http://bitesizebio.com/580/how-sds-page-works/">How SDS-PAGE Works</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+       <!--research and sci method-->
+    <div ng-show="subject == 'Research & Scientific Method'">
+    
+    	<div class="container head res-sub">
+    		Understanding Scientific Method
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.sciencemadesimple.com/scientific_method.html">Understanding and Using the Scientific Method</a>
+            <br><br>
+            <a href="http://chemistry.about.com/od/chemistry101/a/lawtheory.htm">Scientific Hypothesis, Theory, Law Definitions</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+         <!--general biotech-->
+    <div ng-show="subject == 'General Topics in Biotechnology'">
+    
+    	<div class="container head res-sub">
+    		Ethics
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.bioethics.msu.edu/what-is-bioethics">What is Bioethics?</a>
+            <br><br>
+        </div>
+        
+       <div class="container head res-sub">
+    		Manufacture of a Biopharmaceutical Product
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="https://www.wetfeet.com/articles/career-overview-pharmaceuticals">Career Overview: Pharmaceuticals</a>
+            <br><br>
+            <a href="http://www.fda.gov/Drugs/DevelopmentApprovalProcess/HowDrugsareDevelopedandApproved/default.htm">How Drugs are Developed and Approved</a>
+            <br><br>
+            <a href="http://www.gpo.gov/fdsys/pkg/CFR-2015-title21-vol4/pdf/CFR-2015-title21-vol4-sec211-188.pdf">CFR</a>
+            <br><br>
+            <a href="http://www.pharmaguideline.com/2014/07/requirements-for-good-documentation-practice-gdp.html">Requirements for Good Documentation practice</a>
+            <br><br>
+            <a href="http://theqapharm.blogspot.com/2011/08/thetop-ten-responsibilities-of.html">Responsibilities of the Pharmaceutical Quality Unit</a>
+            <br><br>
+            <a href="http://www.vault.com/industries-professions/industries/pharmaceuticals-and-biotechnology.aspx">Pharmaceuticals and Biotechnology</a>
+            <br><br>
+            <a href="http://theqapharm.blogspot.com/2011/08/thetop-ten-responsibilities-of.html">What is Biopharmaceutical R&amp;D?</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Regulatory
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.fda.gov/Drugs/DevelopmentApprovalProcess/Manufacturing/ucm169105.htm">Facts About the Current Good Manufacturing Practices (CGMPs)</a>
+            <br><br>
+            <a href="http://www.archives.gov/federal-register/cfr/about.html">Regulations</a>
+            <br><br>
+        </div>
+        
+   </div>
+   
+    <!--preparing solutions-->
+    <div ng-show="subject == 'Preparing Solutions'">
+    
+    	<div class="container head res-sub">
+    		Proper Technique
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://labtutorials.org/2009/02/01/water-in-the-lab/">Water in the lab</a>
+            <br><br>
+            <a href="http://www.differencebetween.com/difference-between-agar-and-vs-agarose/">Agar vs. Agarose</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Volume/Volume Calculations
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.sciencecompany.com/Preparing-Chemical-Solutions.aspx">Preparing Chemical Solutions</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Weight/Volume Calculations
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.sciencecompany.com/Preparing-Chemical-Solutions.aspx">Preparing Chemical Solutions</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Molarity Calculations
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.chemteam.info/Solutions/Molarity.html">Molarity</a>
+            <br><br>
+            <a href="http://www.sciencecompany.com/Preparing-Chemical-Solutions.aspx">Preparing Chemical Solutions</a>
+            <br><br>
+            <a href="http://abacus.bates.edu/~ganderso/biology/resources/Calculating_final_concentrations_2012.pdf">Calculating Final Concentrations</a>
+            <br><br>
+            <a href="
+http://dl.clackamas.edu/ch105-04/calculat.htm">Calculations Using Molarity</a>
+            <br><br>
+        </div>
+        
+        <div class="container head res-sub">
+    		Dilutions
+    	</div>
+        <div class="container head con" style="padding-left: 70px">
+            <a href="http://www.sciencecompany.com/Preparing-Chemical-Solutions.aspx">Preparing Chemical Solutions</a>
+            <br><br>
+        </div>
+        
+   </div>
     
     <div class="container" align="center">
          <div class="btn btn-default about-ssub" ng-click="startQuiz()">
